--- a/src/Contact.css
+++ b/src/Contact.css
@@ -6,17 +6,17 @@
 }
 
 h2 {
-    font-size: 3em;  /* Increase font size */
+    font-size: 3em;
     color: #333;
     text-align: left;
-    margin: 0;  /* Remove margin for alignment */
-    flex: 1;  /* Make the title take up available space */
+    margin: 0;
+    flex: 1;
 }
 
 p {
     font-size: 1.2em;
     color: #333;
     text-align: left;
-    margin: 0;  /* Remove margin for alignment */
+    margin: 0;
     flex: 1;
 }
