--- a/src/Header.css
+++ b/src/Header.css
@@ -12,22 +12,22 @@
   }
   
   nav ul {
-    list-style: none;            /* Remove bullet points */
-    padding: 0;                  /* Remove padding */
-    margin: 0;                   /* Remove margin */
+    list-style: none;
+    padding: 0;
+    margin: 0;
   }
   
   nav ul li {
-    display: inline;             /* Display list items inline */
-    margin-left: 20px;           /* Add spacing between menu items */
+    display: inline;
+    margin-left: 20px;
   }
   
   nav ul li a {
-    color: #282c34;                /* Text color */
-    text-decoration: none;       /* Remove underline */
+    color: #282c34;
+    text-decoration: none;
   }
   
   nav ul li a:hover {
-    text-decoration: underline;  /* Add underline on hover */
+    text-decoration: underline;
   }
   
