--- a/src/Contact.css
+++ b/src/Contact.css
@@ -8,9 +8,9 @@
 h2 {
     font-size: 3em;
     color: #333;
-    text-align: left;
+    text-align: center;
     margin: 0;
-    flex: 1;
+    flex: 2;
 }
 
 p {
@@ -18,5 +18,5 @@ p {
     color: #333;
     text-align: left;
     margin: 0;
-    flex: 1;
+    flex: 3;
 }
